Timetable added weeks (not finished yet)